--- a/src/app/mulligan/number-field/number-field.component.html
+++ b/src/app/mulligan/number-field/number-field.component.html
@@ -1,14 +1,17 @@
-<mat-card [style]="hitsNeccassary === 0 ? 'background:green' : ''">
-  <mat-card-title>
+<mat-card [style]="hitsNeccassary === 0 ? 'background:#62fc03' : ''">
+  <mat-card-title style="text-align: center">
     Ziel
   </mat-card-title>
-  <mat-card-subtitle>
+  <mat-card-subtitle style="text-align: center">
     Noch {{this.hitsNeccassary}} Treffer notwendig
   </mat-card-subtitle>
-  <mat-card-content>
-    {{this.targetNumber}}
+  <mat-card-content style="text-align: center; font-size: 4rem">
+    <span style="text-align: center">{{this.targetNumber}}</span>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button (click)="hitTarget()">Treffer</button>
+  <mat-card-actions style="text-align: center">
+    <ng-container class="flex-center">
+      <button style="flex:0 1 75%; width: 75%" mat-button (click)="hitTarget()">Treffer</button>
+      <button style="flex: 0 1 25%" mat-button (click)="unHitTarget()">Undo</button>
+    </ng-container>
   </mat-card-actions>
 </mat-card>
