Aktuellen Stand gemerged

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
+<app-navigation></app-navigation>
 <router-outlet></router-outlet>
-
-<nav class="flex-center" style="position:absolute; bottom: 10px; ">
-  <a style="margin: 2rem" routerLink="/halveit" routerLinkActive="active">Halve It</a>
-  <a style="margin: 2rem" routerLink="/mulligan" routerLinkActive="active">Mulligan</a>
-</nav>
