--- a/src/app/mulligan/mulligan/mulligan.component.html
+++ b/src/app/mulligan/mulligan/mulligan.component.html
@@ -12,5 +12,6 @@
     </ng-container>
     <app-number-field style="flex: 0 1 30%; margin: 1rem" [isBull]="true"></app-number-field>
   </div>
+  <!-- TODO FIX ME -->
   <button mat-button (click)="refresh()">Neustart</button>
 </div>
