--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<mat-drawer-container>
+  <mat-drawer [opened]="true"   [disableClose]="true" [mode]="'side'">
+    <app-navigation></app-navigation>
+  </mat-drawer>
+
+  <mat-drawer-content>
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
+
+</mat-drawer-container>
