--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,3 @@
-<nav mat-tab-nav-bar>
-<a class="margin" mat-table-link routerLink="/halveit">Halve-It</a>
-<a class="margin" mat-table-link routerLink="/mulligan">Mulligan</a>
-<a  class="margin" mat-table-link routerLink="/x01">501</a>
-</nav>
+<a class="margin" mat-table-link routerLink="/halveit">Halve-It</a><br>
+<a class="margin" mat-table-link routerLink="/mulligan">Mulligan</a><br>
+<a  class="margin" mat-table-link routerLink="/x01">501</a><br>
