Navigation links eingebaut, noch nicht togglebar

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,3 @@
-<a class="margin" mat-table-link routerLink="/halveit">Halve-It</a><br>
-<a class="margin" mat-table-link routerLink="/mulligan">Mulligan</a><br>
-<a  class="margin" mat-table-link routerLink="/x01">501</a><br>
+<button class="margin" color="'primary'" mat-raised-button routerLink="/halveit">Halve-It</button><br>
+<button class="margin" color="'primary'" mat-raised-button routerLink="/mulligan">Mulligan</button><br>
+<button class="margin" color="'primary'"  mat-raised-button routerLink="/x01">501</button><br>
