--- a/src/app/mulligan/mulligan/mulligan.component.html
+++ b/src/app/mulligan/mulligan/mulligan.component.html
@@ -7,11 +7,9 @@
   </div>
 
   <div class="flex-center" style="flex-wrap: wrap">
-    <ng-container *ngFor="let i of [1,2,3,4,5,6]">
-      <app-number-field style="flex: 0 1 30%; margin: 1rem"></app-number-field>
+    <ng-container *ngFor="let i of this.numberHelpArray">
+      <app-number-field style="flex: 0 1 30%; margin: 1rem" [value]="this.shownNumbers[i]"></app-number-field>
     </ng-container>
-    <app-number-field style="flex: 0 1 30%; margin: 1rem" [isBull]="true"></app-number-field>
+    <app-number-field style="flex: 0 1 30%; margin: 1rem" [isBull]="true" ></app-number-field>
   </div>
-  <!-- TODO FIX ME -->
-  <button mat-button (click)="refresh()">Neustart</button>
 </div>
