--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,4 @@
+<button class="margin" color="'primary'" mat-raised-button routerLink="/dashboard">Dashboard</button><br>
 <button class="margin" color="'primary'" mat-raised-button routerLink="/halveit">Halve-It</button><br>
 <button class="margin" color="'primary'" mat-raised-button routerLink="/mulligan">Mulligan</button><br>
 <button class="margin" color="'primary'"  mat-raised-button routerLink="/x01">501</button><br>
